[project]
name = "pratica-poo"
version = "0.1.0"
description = "Pacote de teste criado na aula de Jayr (POO)"
authors = [
    {name = "Sebastião Sousa Soares",email = "108219864+SebastiaoSoares@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
